--- a/mylogin/templates/userlog/index.html
+++ b/mylogin/templates/userlog/index.html
@@ -25,7 +25,7 @@
         <h3>Welcome to Twitter</h3>
 
         {% if user.is_authenticated %}
-        <h3>Hello {{firstname}}</h3>
+        <h3>Hello {{firstname}}, How are you</h3>
         <h4>You are succesfully logged in..</h4>
         <button type="submit" class="btn mt-3 text-white"><a href="/signout">Sign Out</a></button>
     
